replaced css on the text boxes for the projects to correct overflow

--- a/Pages/AboutMe.css
+++ b/Pages/AboutMe.css
@@ -10,6 +10,8 @@
     max-width: 50%;
     padding: 5px;
     margin: auto;
+    border: 1px solid black;
+
 }
 p.about-me-text{
     padding: 10px;
@@ -30,7 +32,7 @@ p.about-me-text{
 }
 
 .about-me-container{
-    display: block;
+    display: grid;
     justify-content: center;
     align-items: center;
     max-width: 100vw;
@@ -48,10 +50,12 @@ p.about-me-text{
 }
 
 .navbar-left{
-    display: block;
+    display: inline;
     position: fixed;
     top: 0%;
     margin: 5px;
+    border: 1px solid black;
+
 }
 button:hover{
     background-color: rgb(223, 165, 41);
